--- a/CellNuclei/Reference.bib
+++ b/CellNuclei/Reference.bib
@@ -17,3 +17,16 @@ doi="10.1186/1471-2105-14-328",
 url="https://doi.org/10.1186/1471-2105-14-328"
 }
 
+@ARTICLE{Xing2016, 
+author={F. Xing and L. Yang}, 
+journal={IEEE Reviews in Biomedical Engineering}, 
+title={Robust Nucleus/Cell Detection and Segmentation in Digital Pathology and Microscopy Images: A Comprehensive Review}, 
+year={2016}, 
+volume={9}, 
+number={}, 
+pages={234-263}, 
+abstract={Digital pathology and microscopy image analysis is widely used for comprehensive studies of cell morphology or tissue structure. Manual assessment is labor intensive and prone to interobserver variations. Computer-aided methods, which can significantly improve the objectivity and reproducibility, have attracted a great deal of interest in recent literature. Among the pipeline of building a computer-aided diagnosis system, nucleus or cell detection and segmentation play a very important role to describe the molecular morphological information. In the past few decades, many efforts have been devoted to automated nucleus/cell detection and segmentation. In this review, we provide a comprehensive summary of the recent state-of-the-art nucleus/cell segmentation approaches on different types of microscopy images including bright-field, phase-contrast, differential interference contrast, fluorescence, and electron microscopies. In addition, we discuss the challenges for the current methods and the potential future work of nucleus/cell detection and segmentation.}, 
+keywords={biological tissues;biomedical optical imaging;cellular biophysics;electron microscopy;fluorescence;image segmentation;medical image processing;neurophysiology;optical microscopy;reviews;cell morphology;comprehensive review;computer-aided diagnosis system;differential interference contrast;digital pathology;electron microscopy;fluorescence;microscopy image analysis;molecular morphological information;nucleus-cell detection;robust nucleus-cell detection;state-of-the-art nucleus-cell segmentation approaches;tissue structure;Computer aided diagnosis;Feature extraction;Image analysis;Image segmentation;Microscopy;Morphology;Pathology;Cell;detection;digital pathology;histopathology;microscopy images;nucleus;segmentation;Cell Nucleus;Image Interpretation, Computer-Assisted;Microscopy}, 
+doi={10.1109/RBME.2016.2515127}, 
+ISSN={1937-3333}, 
+month={},}
