--- a/CellNuclei/Reference.bib
+++ b/CellNuclei/Reference.bib
@@ -30,3 +30,239 @@ keywords={biological tissues;biomedical optical imaging;cellular biophysics;elec
 doi={10.1109/RBME.2016.2515127}, 
 ISSN={1937-3333}, 
 month={},}
+
+@Article{Li2007,
+author="Li, Gang
+and Liu, Tianming
+and Tarokh, Ashley
+and Nie, Jingxin
+and Guo, Lei
+and Mara, Andrew
+and Holley, Scott
+and Wong, Stephen TC",
+title="3D cell nuclei segmentation based on gradient flow tracking",
+journal="BMC Cell Biology",
+year="2007",
+month="Sep",
+day="04",
+volume="8",
+number="1",
+pages="40",
+abstract="Reliable segmentation of cell nuclei from three dimensional (3D) microscopic images is an important task in many biological studies. We present a novel, fully automated method for the segmentation of cell nuclei from 3D microscopic images. It was designed specifically to segment nuclei in images where the nuclei are closely juxtaposed or touching each other. The segmentation approach has three stages: 1) a gradient diffusion procedure, 2) gradient flow tracking and grouping, and 3) local adaptive thresholding.",
+issn="1471-2121",
+doi="10.1186/1471-2121-8-40",
+url="https://doi.org/10.1186/1471-2121-8-40"
+}
+
+@Article{Holley2000,
+author="Holley, S. A.
+and Geisler, R.
+and N{\"u}sslein-Volhard, C.",
+title="Control of her1 expression during zebrafish somitogenesis by a Delta-dependent oscillator and an independent wavefront activity",
+journal="Genes {\&} Dev",
+year="2000",
+volume="14"
+}
+
+@Article{Jülich2005,
+author="J{\"u}lich, D.
+and Hwee, L. C.
+and Round, J.
+and Nicoliaje, C.
+and Scroeder, J.
+and Davies, A.
+and Geisler, R.
+and Lewis, J.
+and Jiang, Y. J.
+and Holley, S. A.",
+title="beamter/deltaC and the role of Notch ligands in the zebrafish somite segmentation, hindbrain neurogenesis and hypochord differentiation",
+journal="Dev Biol",
+year="2005",
+volume="286",
+doi="10.1016/j.ydbio.2005.06.040",
+url="https://doi.org/10.1016/j.ydbio.2005.06.040"
+}
+
+@Article{Lin2003,
+author="Lin, G.
+and Adiga, U.
+and Olson, K.
+and Guzowski, J.
+and Barnes, C.
+and Roysam, B.",
+title="A hybrid 3-D watershed algorithm incorporating gradient cues and object models for automatic segmentation of nuclei in confocal image stacks",
+journal="Cytometry",
+year="2003",
+volume="56A",
+doi="10.1002/cyto.a.10079",
+url="https://doi.org/10.1002/cyto.a.10079"
+}
+
+@Article{Lin2005,
+author="Lin, G.
+and Chawla, M. K.
+and Olson, K.
+and Guzowski, J. F.
+and Barnes, C. A.
+and Roysam, B.",
+title="Hierarchical, model-based merging of multiple fragments for improvoed three-dimensional segmentation of nuclei",
+journal="Cytometry",
+year="2005",
+volume="63A",
+doi="10.1002/cyto.a.20099",
+url="https://doi.org/10.1002/cyto.a.20099"
+}
+
+@Article{UmeshAdiga2001,
+author="Umesh Adiga, P. S.
+and Chaudhuri, B. B.",
+title="An efficient method based on watershed and rule-based merging for segmentation of 3-D histo-pathological images",
+journal="Pattern Recognition",
+year="2001",
+volume="34",
+doi="10.1016/S0031-3203(00)00076-5",
+url="https://doi.org/10.1016/S0031-3203(00)00076-5"
+}
+
+@Article{Belien2002,
+author="Belien, J. A. M.
+and Ginkel, H. A. H. M.
+and Tekola, P.
+and Ploeger, L. S.
+and Poulin, N. M.
+and Baak, J. P. A.
+and Diest, P. J.",
+title="Confocal DNA Cytometry: A Contour-Based Segmentation Algorithm for Automated Three-Dimensional Image Segmentation",
+journal="Cytometry",
+year="2002",
+volume="49",
+doi="10.1002/cyto.10138",
+url="https://doi.org/10.1002/cyto.10138"
+}
+
+@Article{Wahlby2004,
+author="Wahlby, C.
+and Sintorn, I. M.
+and Erlandsson, F.
+and Borgefors, G.
+and Bengtsson, E.",
+title="Combining intensity, edge and shape information for 2D and 3D segmentation of cell nuclei in tissue sections",
+journal="J Microsc",
+year="2004",
+volume="215",
+doi="10.1111/j.0022-2720.2004.01338.x",
+url="https://doi.org/10.1111/j.0022-2720.2004.01338.x"
+}
+
+@Article{Dufour2005,
+author="Dufour, A.
+and Shinin, V.
+and Tajbakhsh, S.
+and Guillen-Aghion, N.
+and Olivo-Marin, J. C.
+and Zimmer, C.",
+title="Segmentation and Tracking Fluorescent Cells in Dynamic 3-D Microscopy with Coupled Active Surfaces",
+journal="IEEE Trans Image Processing",
+year="2005",
+volume="14",
+doi="10.1109/TIP.2005.852790",
+url="https://doi.org/10.1109/TIP.2005.852790"
+}
+
+@Article{Sarti2000,
+author="Sarti, A.
+and de Solorzano, C. O.
+and Locket, S.
+and Malladi, R.",
+title="A Geometric Model for 3-D Confocal Image Analysis",
+journal="IEEE Trans Biomedical Engineering",
+year="2000",
+volume="47",
+doi="10.1109/10.887941",
+url="https://doi.org/10.1109/10.887941"
+}
+
+@Article{Vincent1991,
+author="Vincent, L.
+and Soille, P.",
+title="Watersheds in digital spaces: an efficient algorithm based on immersion simulations",
+journal="IEEE Trans Pattern Anal Mach Intell",
+year="1991",
+volume="13",
+doi="10.1109/34.87344",
+url="https://doi.org/10.1109/34.87344"
+}
+
+@Article{Xu1998,
+author="Xu, C.
+and Prince, J.",
+title="Snakes, shapes, and gradient vector flow",
+journal="IEEE Trans Image Processing",
+year="1998",
+volume="7",
+doi="10.1109/83.661186",
+url="https://doi.org/10.1109/83.661186"
+}
+
+@Article{Bajcsy1989,
+author="Bajcsy, R.
+and Kovacic, S.",
+title="Multiresolution elastic matching",
+journal="Computer Vision, Graphics and Image Processing",
+year="1989",
+volume="46",
+doi="10.1016/S0734-189X(89)80014-3",
+url="https://doi.org/10.1016/S0734-189X(89)80014-3"
+}
+
+@Article{Davatzikos1996,
+author="Davatzikos, C.
+and Prince, J.
+and Bryan, R.",
+title="Image Registration Based on Boundary Mapping",
+journal="IEEE Trans Med Imaging",
+year="1996",
+volume="15",
+doi="10.1109/42.481446",
+url="https://doi.org/10.1109/42.481446"
+}
+
+@Article{Otsu1979,
+author="Otsu, N.",
+title="A threshold selection method from gray-level histograms",
+journal="IEEE Trans Systems Man Cybernetics",
+year="1979",
+volume="9",
+doi="10.1109/TSMC.1979.4310076",
+url="https://doi.org/10.1109/TSMC.1979.4310076"
+}
+
+@Article{OrtizdeSolorzano1999,
+author="Ortiz de Solorzano, C.
+and Garcia Rodriguez, E.
+and Jones, A.
+and Pinkel, D.
+and Gray, J. W.
+and Sudar, D.
+and Lockett, S. J.",
+title="Segmentation of confocal microscope images of cell nuclei in thick tissue sections",
+journal="J Microsc",
+year="1999",
+volume="193",
+doi="10.1046/j.1365-2818.1999.00463.x",
+url="https://doi.org/10.1046/j.1365-2818.1999.00463.x"
+}
+
+@Article{DeSolorzano2001,
+author="De Solorzano, C. O.
+and Malladi, R.
+and Lelievre, S. A.
+and Lockett, S. J.",
+title="Segmentation of nuclei and cells using membrane related protein markers",
+journal="J Microsc",
+year="2001",
+volume="201",
+doi="10.1046/j.1365-2818.2001.00854.x",
+url="https://doi.org/10.1046/j.1365-2818.2001.00854.x"
+}
+
